@@ -534,13 +534,17 @@ int unit_warp(struct block_list *bl,int m,short x,short y,int type)
 			return 2;
 		}
 	}
-			
+
 	if (bl->type == BL_PC) //Use pc_setpos
 		return pc_setpos((TBL_PC*)bl, map[m].index, x, y, type);
 	
 	if (!unit_remove_map(bl, type))
 		return 3;
 	
+	if (bl->m != m && battle_config.clear_unit_onwarp &&
+		battle_config.clear_unit_onwarp&bl->type)
+		skill_clear_unitgroup(bl);
+
 	bl->x=ud->to_x=x;
 	bl->y=ud->to_y=y;
 	bl->m=m;
